fixtures/frontend/milestone-2/invalid/nested-fanout-map/main.aivi
type User = {
    emails: List Text
}

fun joinEmails:Text items:List Text =>
    "joined"

value users:List User = [
    { emails: ["ada@example.com"] }
]

value summaries =
    users
     *|> (.emails *|> _ <|* joinEmails)
